--- a/backend-builder/Dockerfile-E2E
+++ b/backend-builder/Dockerfile-E2E
@@ -1,4 +1,4 @@
 FROM maven:3.5-jdk-8-alpine AS build
 COPY /src /usr/src/spring/src
 COPY pom.xml /usr/src/spring
-RUN mvn -f /usr/src/spring/pom.xml clean test
+RUN mvn -f /usr/src/spring/pom.xml clean test && mvn -f /usr/src/spring/pom.xml cobertura:cobertura && bash <(curl -s https://codecov.io/bash)
