--- a/backend-builder/pom.xml
+++ b/backend-builder/pom.xml
@@ -4,8 +4,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.builder</groupId>
-    <artifactId>demo</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <artifactId>backend-builder</artifactId>
+    <version>current</version>
     <packaging>jar</packaging>
 
     <name>demo</name>
