--- a/backend-builder/pom.xml
+++ b/backend-builder/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.builder</groupId>
     <artifactId>backend-builder</artifactId>
-    <version>current</version>
+    <version>0.0.2</version>
     <packaging>jar</packaging>
 
     <name>demo</name>
