--- a/backend-builder/Dockerfile
+++ b/backend-builder/Dockerfile
@@ -6,5 +6,5 @@ RUN mvn -f /usr/src/spring/pom.xml clean javadoc:javadoc install
 
 FROM openjdk:8-jre-alpine
 RUN apk update && apk add bash
-COPY --from=build /usr/src/spring/target/demo-0.0.1-SNAPSHOT.jar app.jar
+COPY --from=build /usr/src/spring/target/backend-builder-0.0.2.jar app.jar
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-Dspring.profiles.active=docker","-jar","/app.jar"]
