--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,9 @@
-sudo: required
-services:
-  - docker
-
-env:
-  COMPOSE_VERSION: 1.22.0
-
-before_install:
- - curl -L https://github.com/docker/compose/releases/download/${COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
- - chmod +x docker-compose
- - sudo mv docker-compose /usr/local/bin
+language: java
 
 script:
-  - sudo service mysql stop
-  - cd docker
-  - docker-compose -f docker-compose-e2e.yml up --build
-  - pwd
-  - cd new
-  - ls -la
+  - cd backend-builder
+  - mvn clean package
+  - cd ..
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
